Bug 176223 - cd audio not detected , data cd detected
Summary: cd audio not detected , data cd detected
Status: RESOLVED FIXED
Alias: None
Product: solid
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Mandriva RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Kevin Ottens
URL:
Keywords:
: 179292 199128 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-11-27 11:51 UTC by pierre_prof
Modified: 2009-07-07 17:12 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description pierre_prof 2008-11-27 11:51:55 UTC
Version:            (using KDE 4.1.0)
OS:                Linux
Installed from:    Mandriva RPMs

fot each distribtion using kde 4.1 and next I can not open cd audio or video. i HAVE AN OLD LAP TOP  WITH PENTIUM 4 AND A YOUNGER with Dual core , mother board P 965 neo. 
On The desktop ( Mother board P 965 ...:
I have tried suse 11 with kde 3,5 9 the cd  data or video are detected . I can heard music .. If I try to use Suse 11 with Kd 4,* , no problem when I introduce a cd data , problem with cd audio or video, they are not detected. with mandriva 2008, no problem for any cd data or audio, video. with mandriva 2009 no problem with data but impossible to use cd audio. Same problem with kubuntu 8.1
lap top :
I have just done the sama tests on my old laptop , with any distribtion using kde 3,5 * no problem. but, for exemple , wth mandriva 2900 and kde 4.1 , the cd adio or video are detected, same thing with kubuntu. 
I apreciated kde 3;5 * . And to continu to use it 
I have chance that Suse 11 propose kde 3. 5 and 4..

              Thanks to find a solution
Comment 1 Kevin Ottens 2009-02-22 19:15:54 UTC
SVN commit 930132 by ervin:

Expose audio cds in the places model and make them point to audiocd:/.

BUG: 176223


 M  +4 -0      kfileplacesitem.cpp  
 M  +5 -2      kfileplacesmodel.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=930132
Comment 2 Dario Andres 2009-05-17 00:20:39 UTC
*** Bug 179292 has been marked as a duplicate of this bug. ***
Comment 3 Dario Andres 2009-07-07 17:12:32 UTC
*** Bug 199128 has been marked as a duplicate of this bug. ***