Expose audio cds in the places model and make them point to audiocd:/.

BUG: 176223

svn path=/trunk/KDE/kdelibs/; revision=930132